--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ description:           >
 
 # A shorter description for the sidebar.
 tagline:               >
-  A Jekyll theme with JavaScript powers.
-  Open `_config.yml` to edit this text.
+  주니어 개발자 k4keye 의 
+  블로그 입니다.
 
 # A list of keywords for your blog
 keywords:              []
