--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ url: "https://k4keye.github.io"
 
 author: k4keye                  # change to your full name
 
-avatar: /assets/img/sample/k4keye.png # support internet resources
+avatar: /assets/img/sample/avatar.jpg # support internet resources
 
 github:
   username: k4keye             # change to your github username
