--- a/_config.yml
+++ b/_config.yml
@@ -7,33 +7,35 @@
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # --------------------------
-title: K4keye                         # the main title
+title: Chirpy                          # the main title
 
-tagline: K4keye의 개발 블로그  # it will display as the sub-title
+tagline: A text-focused Jekyll theme.  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  주니어 개발자의 생존 일지
+  A minimal, portfolio, sidebar,
+  bootstrap Jekyll theme with responsive web design
+  and focuses on text presentation.
 
 # fill in the base hostname & protocol for your site, e.g., 'https://username.github.io'
-url: "https://k4keye.github.io"
+url: 'https://k4keye.github.io'
 
 author: k4keye                  # change to your full name
 
-avatar: /assets/img/sample/avatar.jpg # support internet resources
+avatar: /assets/img/sample/avatar.jpg   # support internet resources
 
 github:
-  username: k4keye             # change to your github username
+  username: k4keye           # change to your github username
 
 twitter:
   username: twitter_username            # change to your twitter username
 
 social:
-  name: k4keye                 # it will shows as the copyright owner in Footer
-  email: vps32@naver.com             # change to your email address
+  name: your_full_name                  # it will shows as the copyright owner in Footer
+  email: example@doamin.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/k4keye       # change to your github homepage
+    - https://github.com/username       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -47,7 +49,7 @@ google_site_verification: google_meta_tag_verification # change to your verifica
 baseurl: ''
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Seoul
+timezone: Asia/Shanghai
 
 google_analytics:
   id: ''          # Fill with your Google Analytics ID
@@ -77,7 +79,7 @@ disqus:
 #
 #     dark   - Use the dark color scheme
 #
-theme_mode: dark # <light|dark>
+theme_mode: dark  # <light|dark>
 
 # boolean type, the global switch for ToC in posts.
 toc: true
@@ -175,7 +177,7 @@ compress_html:
   profile: false
   blanklines: false
   ignore:
-    envs: [development]
+    envs: []
 
 exclude:
   - vendor
