--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ plainwhite:
     #rss: rss
     #dribbble: jekyll
     #flickr:   jekyll
-    #instagram: jekyll
+    instagram: k4keye
     #pinterest: jekyll
     #youtube: jekyll
     #facebook: jekyll
